--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,7 @@
+networks:
+  traefik-net:
+    external: true
+
 services:
   app:
     build:
@@ -38,6 +42,8 @@ services:
       - db_data:/var/lib/mysql
     ports:
       - "3306:3306"
+    networks:
+      - traefik-net  
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "--host=localhost", "--user=root", "--password=root"]
       interval: 10s
