--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-  GNU nano 7.2                ../OpenHackathon/docker-compose.yml                         networks:
+networks:
   traefik-net:
     external: true
 
@@ -51,8 +51,9 @@ services:
     networks:
       - traefik-net
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "--host=localhost", "--user=root", "--password=>      interval: 10s
-      retries: 5
+    test: ["CMD", "mysqladmin", "ping", "--host=localhost", "--user=root", "--password=root"]      
+    interval: 10s
+    retries: 5
 
 volumes:
   db_data:
